--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.textfield.CustomTextField?>
 
-<BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
+<BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
    <left>
       <AnchorPane prefHeight="600.0" prefWidth="285.0" BorderPane.alignment="CENTER">
          <children>
@@ -25,9 +25,10 @@
                            <children>
                               <AnchorPane prefHeight="568.0" prefWidth="289.0">
                                  <children>
-                                    <AnchorPane fx:id="_practiceListPane" prefHeight="502.0" prefWidth="290.0" AnchorPane.bottomAnchor="70.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
-                                    <JFXButton fx:id="_practiceListButton" buttonType="RAISED" layoutX="4.0" layoutY="524.0" onAction="#practiceListClicked" prefHeight="48.0" prefWidth="135.0" text="Practice Selected" />
-                                    <JFXCheckBox fx:id="_practiseFileSelectAllPractiseFileCheckBox" layoutX="1.0" layoutY="504.0" mnemonicParsing="false" onAction="#selectAllPractiseFileCheckBox" prefHeight="22.0" prefWidth="284.0" text="Select All" />
+                                    <AnchorPane id="_practiceListPane" fx:id="_practiceListPane" prefHeight="489.0" prefWidth="289.0" stylesheets="@SelectionSceneStyleSheet.css" AnchorPane.bottomAnchor="79.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
+                                    <JFXButton id="_pracSelButton" fx:id="_practiceListButton" buttonType="RAISED" layoutY="513.0" onAction="#practiceListClicked" prefHeight="48.0" prefWidth="143.0" stylesheets="@SelectionSceneStyleSheet.css" text="Practice Selected" />
+                                    <JFXCheckBox id="_selectAllToggle" fx:id="_practiseFileSelectAllPractiseFileCheckBox" layoutX="3.0" layoutY="485.0" mnemonicParsing="false" onAction="#selectAllPractiseFileCheckBox" prefHeight="28.0" prefWidth="284.0" stylesheets="@SelectionSceneStyleSheet.css" text="Select All" />
+                                    <JFXButton id="_removeSelButton" fx:id="_removeButton" buttonType="RAISED" layoutX="145.0" layoutY="513.0" onAction="#removeClicked" prefHeight="48.0" prefWidth="141.0" stylesheets="@SelectionSceneStyleSheet.css" text="Remove Selected" />
                                  </children>
                               </AnchorPane>
                            </children></Pane>
@@ -39,9 +40,9 @@
                            <children>
                               <AnchorPane prefHeight="567.0" prefWidth="285.0">
                                  <children>
-                                    <AnchorPane fx:id="_recordingListPane" prefHeight="495.0" prefWidth="284.0" />
-                                    <JFXButton fx:id="_deleteUserRecording" layoutY="517.0" mnemonicParsing="false" onAction="#deleteSelectedUserRecordings" prefHeight="49.0" prefWidth="284.0" text="Delete Selected" />
-                                    <JFXCheckBox fx:id="_userRecordingCheckBox" layoutX="1.0" layoutY="508.0" mnemonicParsing="false" onAction="#selectAllUserRecordings" prefHeight="18.0" prefWidth="283.0" />
+                                    <AnchorPane id="_recordingListPane" fx:id="_recordingListPane" prefHeight="494.0" prefWidth="284.0" stylesheets="@SelectionSceneStyleSheet.css" />
+                                    <JFXButton id="_deleteSelButton" fx:id="_deleteUserRecording" layoutY="517.0" mnemonicParsing="false" onAction="#deleteSelectedUserRecordings" prefHeight="49.0" prefWidth="284.0" stylesheets="@SelectionSceneStyleSheet.css" text="Delete Selected" />
+                                    <JFXCheckBox id="_checkBoxToggle" fx:id="_userRecordingCheckBox" layoutX="1.0" layoutY="494.0" mnemonicParsing="false" onAction="#selectAllUserRecordings" prefHeight="26.0" prefWidth="283.0" stylesheets="@SelectionSceneStyleSheet.css" />
                                  </children>
                               </AnchorPane>
                            </children></Pane>
@@ -60,17 +61,17 @@
                   <Font size="48.0" />
                </font>
             </Label>
-            <JFXButton fx:id="_addToListButton" buttonType="RAISED" layoutX="330.0" layoutY="370.0" onAction="#addToListClicked" prefHeight="49.0" prefWidth="110.0" text="Add to List">
+            <JFXButton id="_addToListButton" fx:id="_addToListButton" buttonType="RAISED" layoutX="308.0" layoutY="370.0" onAction="#addToListClicked" prefHeight="49.0" prefWidth="110.0" stylesheets="@SelectionSceneStyleSheet.css" text="Add to List">
                <font>
                   <Font size="18.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="_uploadButton" buttonType="RAISED" layoutX="126.0" layoutY="474.0" onAction="#uploadClicked" prefHeight="76.0" prefWidth="150.0" text="Upload">
+            <JFXButton id="_uploadButton" fx:id="_uploadButton" buttonType="RAISED" layoutX="126.0" layoutY="474.0" onAction="#uploadClicked" prefHeight="76.0" prefWidth="150.0" stylesheets="@SelectionSceneStyleSheet.css" text="Upload">
                <font>
                   <Font size="18.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="_practiceButton" buttonType="RAISED" layoutX="440.0" layoutY="370.0" onAction="#practiceClicked" prefHeight="49.0" prefWidth="110.0" text="Practice">
+            <JFXButton id="_pracButton" fx:id="_practiceButton" buttonType="RAISED" layoutX="440.0" layoutY="370.0" onAction="#practiceClicked" prefHeight="49.0" prefWidth="110.0" stylesheets="@SelectionSceneStyleSheet.css" text="Practice">
                <font>
                   <Font size="18.0" />
                </font>
