--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.textfield.CustomTextField?>
 
-<BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
+<BorderPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
    <left>
       <AnchorPane prefHeight="600.0" prefWidth="285.0" BorderPane.alignment="CENTER">
          <children>
@@ -54,7 +54,7 @@
       </AnchorPane>
    </left>
    <center>
-      <AnchorPane prefHeight="600.0" prefWidth="625.0" BorderPane.alignment="CENTER">
+      <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="600.0" prefWidth="625.0" BorderPane.alignment="CENTER">
          <children>
             <Label layoutX="126.0" layoutY="127.0" prefHeight="70.0" prefWidth="411.0" text="Type in a Name">
                <font>
@@ -66,7 +66,7 @@
                   <Font size="18.0" />
                </font>
             </JFXButton>
-            <JFXButton id="_uploadButton" fx:id="_uploadButton" buttonType="RAISED" layoutX="26.0" layoutY="554.0" onAction="#uploadClicked" prefHeight="32.0" prefWidth="106.0" stylesheets="@SelectionSceneStyleSheet.css" text="Upload">
+            <JFXButton id="_uploadButton" fx:id="_uploadButton" buttonType="RAISED" layoutX="26.0" layoutY="548.0" onAction="#uploadClicked" prefHeight="39.0" prefWidth="124.0" stylesheets="@SelectionSceneStyleSheet.css" text="Upload">
                <font>
                   <Font size="18.0" />
                </font>
@@ -78,9 +78,9 @@
             </JFXButton>
             <CustomTextField fx:id="_nameTextField" layoutX="126.0" layoutY="228.0" prefHeight="38.0" prefWidth="410.0" />
             <Label fx:id="_pointsLabel" layoutX="507.0" layoutY="39.0" prefHeight="41.0" prefWidth="59.0" text="Label" />
-            <ImageView fitHeight="59.0" fitWidth="63.0" layoutX="432.0" layoutY="30.0">
+            <ImageView fitHeight="37.0" fitWidth="40.0" layoutX="456.0" layoutY="43.0">
                <image>
-                  <Image url="@../../resources/Yellow_Star.png" />
+                  <Image url="@Yellow_Star.png" />
                </image>
             </ImageView>
          </children>
