--- a/src/application/SelectionScene.fxml
+++ b/src/application/SelectionScene.fxml
@@ -17,7 +17,7 @@
 <?import javafx.scene.text.Font?>
 <?import org.controlsfx.control.textfield.CustomTextField?>
 
-<BorderPane fx:id="_mainContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
+<BorderPane fx:id="_mainContainer" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="621.0" prefWidth="966.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.SelectionSceneController">
    <left>
       <JFXTabPane id="_tabParent" stylesheets="@SelectionSceneStyleSheet.css">
          <tabs>
@@ -64,45 +64,60 @@
       </JFXTabPane>
    </left>
    <center>
-      <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" BorderPane.alignment="CENTER">
+      <AnchorPane BorderPane.alignment="CENTER">
          <children>
-            <VBox spacing="100.0">
+            <VBox alignment="CENTER" layoutX="4.0" layoutY="83.0" prefHeight="379.0" prefWidth="652.0" AnchorPane.bottomAnchor="159.0" AnchorPane.leftAnchor="4.0" AnchorPane.rightAnchor="1.0" AnchorPane.topAnchor="83.0">
                <children>
-                  <HBox alignment="TOP_RIGHT" minHeight="-Infinity" minWidth="-Infinity" spacing="20.0">
+                  <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="213.0" prefWidth="453.0">
+                     <children>
+                        <CustomTextField fx:id="_nameTextField" layoutX="46.0" layoutY="154.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="26.0" prefWidth="376.0" />
+                        <Label layoutX="14.0" layoutY="48.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" text="Type in a Name">
+                           <font>
+                              <Font size="48.0" />
+                           </font>
+                        </Label>
+                     </children>
+                  </Pane>
+                  <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="38.0" prefWidth="127.0">
+                     <children>
+                        <HBox alignment="TOP_RIGHT" spacing="20.0">
+                             <children>
+                              <JFXButton id="_addToListButton" fx:id="_addToListButton" buttonType="RAISED" onAction="#addToListClicked" prefHeight="38.0" prefWidth="126.0" stylesheets="@SelectionSceneStyleSheet.css" text="Add to List">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </JFXButton>
+                              <JFXButton id="_pracButton" fx:id="_practiceButton" buttonType="RAISED" onAction="#practiceClicked" prefHeight="38.0" prefWidth="109.0" stylesheets="@SelectionSceneStyleSheet.css" text="Practice">
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                              </JFXButton>
+                           </children>
+                        </HBox>
+                     </children>
+                  </Pane>
+               </children>
+            </VBox>
+            <Pane AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="20.0">
+               <children>
+                  <HBox alignment="TOP_RIGHT" layoutY="20.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="43.0" prefWidth="111.0" spacing="20.0">
                       <children>
                         <ImageView fitHeight="37.0" fitWidth="40.0">
                            <image>
                               <Image url="@Yellow_Star.png" />
                            </image>
                         </ImageView>
-                        <Label fx:id="_pointsLabel" prefHeight="41.0" prefWidth="59.0" text="Label" />
+                        <Label fx:id="_pointsLabel" prefHeight="43.0" prefWidth="329.0" text="Label" />
                      </children>
+                     <opaqueInsets>
+                        <Insets right="20.0" top="20.0" />
+                     </opaqueInsets>
                   </HBox>
-                  <VBox spacing="30.0">
-                     <children>
-                        <Label maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" text="Type in a Name">
-                           <font>
-                              <Font size="48.0" />
-                           </font>
-                        </Label>
-                        <CustomTextField fx:id="_nameTextField" prefHeight="38.0" />
-                     </children>
-                  </VBox>
-                  <HBox alignment="TOP_RIGHT" spacing="20.0">
-                     <children>
-                        <JFXButton id="_addToListButton" fx:id="_addToListButton" buttonType="RAISED" onAction="#addToListClicked" prefHeight="38.0" prefWidth="126.0" stylesheets="@SelectionSceneStyleSheet.css" text="Add to List">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </JFXButton>
-                        <JFXButton id="_pracButton" fx:id="_practiceButton" buttonType="RAISED" onAction="#practiceClicked" prefHeight="38.0" prefWidth="109.0" stylesheets="@SelectionSceneStyleSheet.css" text="Practice">
-                           <font>
-                              <Font size="18.0" />
-                           </font>
-                        </JFXButton>
-                     </children>
-                  </HBox>
-                  <HBox>
+               </children>
+            </Pane>
+            <Pane AnchorPane.bottomAnchor="30.0" AnchorPane.rightAnchor="30.0">
+               <children>
+                  <HBox layoutX="30.0" layoutY="99.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" spacing="5.0">
                      <children>
                         <JFXButton id="_uploadButton" fx:id="_uploadButton" buttonType="RAISED" onAction="#uploadClicked" prefHeight="39.0" prefWidth="124.0" stylesheets="@SelectionSceneStyleSheet.css" text="Upload">
                            <font>
@@ -114,13 +129,7 @@
                      </children>
                   </HBox>
                </children>
-               <opaqueInsets>
-                  <Insets />
-               </opaqueInsets>
-               <padding>
-                  <Insets left="30.0" />
-               </padding>
-            </VBox>
+            </Pane>
          </children>
       </AnchorPane>
    </center>
